[project]
name = "backend"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mie Haga", email = "miehaga2@gmail.com"},
]
dependencies = [
    "Authlib>=1.3.1",
    "fastapi>=0.111.0",
    "starlette>=0.37.2",
    "itsdangerous>=2.2.0",
    "loguru>=0.7.2",
    "httpx>=0.27.0",
    "pytest>=8.2.2",
    "asyncpg>=0.29.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true


[tool.pytest.ini_options]
testpaths = [
    "src/backend"
]
python_files = [
    "tests.py",
    "test_*.py",
    "*_test.py",
]

[tool.pdm.dev-dependencies]
dev = [
    "asyncpg-stubs>=0.29.1",
    "pyright>=1.1.371",
    "ruff>=0.5.1",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D203", "D213", "ANN201"]
